booq-dev/backend/ingress-route-patch.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: booq-backend-ingressroute

spec:
  routes:
    - match: Host(`booq-dev.trapti.tech`) && PathPrefix(`/api/`)
      middlewares:
        - name: auth-trapti-tech-hard
